--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8",
@@ -17,8 +18,10 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
