--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.8",
+    "@mui/x-charts": "^7.28.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
